# parc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: audit.yml  ci.yml  docs.yml
docs/: .eleventyignore  eleventy.config.js  json-rpc.md  package-lock.json  package.json  parc-m0-tasks.md  parc-m1-tasks.md  parc-m2-tasks.md  parc-m3-tasks.md  parc-m5-tasks.md  parc-m6-tasks.md  parc-m7-tasks.md  parc-m9-tasks.md
docs/src/: architecture.md  collaboration.md  configuration.md  custom-types.md  fragment-format.md  gui.md  index.njk  install.md  json-rpc.md  plugins.md  quick-start.md  releasing.md  search-dsl.md
docs/src/_data/: nav.js  site.js
docs/src/_includes/layouts/: base.njk  doc.njk
docs/src/assets/css/: base.css  layout.css  prism.css  tokens.css
docs/src/cli/: attachments.md  export-import.md  fragments.md  history.md  index.md  links.md  maintenance.md  organization.md  resurfacing.md  search.md  tui.md  vault.md
docs/src/concepts/: attachments.md  fragments.md  history.md  tags-and-links.md  types.md  vaults.md
parc-cli/: Cargo.toml
parc-cli/src/: hooks.rs  main.rs  render.rs
parc-cli/src/commands/: archive.rs  attach.rs  backlinks.rs  capture.rs  completions.rs  delete.rs  doctor.rs  due.rs  edit.rs  export.rs  git_hooks.rs  history.rs  import.rs  init.rs  link.rs  list.rs  mod.rs  new.rs  plugin.rs  promote.rs  random.rs  reindex.rs  resurfacing.rs  review.rs  schema.rs  search.rs  server.rs  set.rs  show.rs  stale.rs  tags.rs  today.rs  trash.rs  tui.rs  types.rs  unlink.rs  update.rs  vault.rs  version.rs
parc-cli/src/commands/tui/: actions.rs  app.rs  cache.rs  command.rs  data.rs  highlight.rs  markdown.rs  mod.rs  ui.rs
parc-cli/tests/: integration.rs
parc-core/: Cargo.toml
parc-core/src/: attachment.rs  config.rs  date.rs  doctor.rs  error.rs  export.rs  fragment.rs  fuzzy.rs  history.rs  hook.rs  import.rs  index.rs  lib.rs  link.rs  schema.rs  search.rs  secure_fs.rs  tag.rs  vault.rs
parc-core/src/builtin/: config.yml
parc-core/src/builtin/schemas/: note.yml
parc-core/src/plugin/: host.rs  manager.rs  mod.rs  runtime.rs
parc-core/tests/: plugin_integration.rs
parc-core/tests/fixtures/plugins/echo-plugin/: Cargo.toml  echo.toml  echo.wasm
parc-core/tests/fixtures/plugins/echo-plugin/src/: lib.rs
parc-gui/: Cargo.toml  tauri.conf.json
parc-gui/src/: dto.rs  error.rs  lib.rs  main.rs  state.rs
parc-gui/src/commands/: attachment.rs  fragment.rs  history.rs  link.rs  markdown.rs  mod.rs  schema.rs  search.rs  tag.rs  vault.rs
parc-gui/tests/: commands.rs
parc-gui/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
parc-gui/ui/src/: main.ts
parc-gui/ui/src/api/: attachments.ts  fragments.ts  history.ts  links.ts  markdown.ts  schemas.ts  search.ts  tags.ts  types.ts  vault.ts
parc-gui/ui/src/components/: app-shell.ts  command-palette.ts  filter-bar.ts  fragment-card.ts  fragment-row.ts  shortcut-help.ts  status-badge.ts  tag-chip.ts  type-badge.ts
parc-gui/ui/src/lib/: dsl.ts  event-bus.ts  force-layout.ts  format.ts  keyboard.ts  router.ts  state.ts  theme.ts
parc-gui/ui/src/styles/: global.css  themes.css
parc-gui/ui/src/views/: fragment-create.ts  fragment-detail.ts  fragment-editor.ts  fragment-list.ts  graph-view.ts  history-view.ts  search-view.ts  settings-view.ts  tag-browser.ts  vault-switcher.ts
parc-server/: Cargo.toml
parc-server/src/: jsonrpc.rs  lib.rs  main.rs  router.rs  transport.rs
parc-server/src/methods/: attachment.rs  fragment.rs  history.rs  link.rs  mod.rs  schema.rs  tags.rs  validation.rs  vault.rs
parc-server/tests/: integration.rs
pkg/macos/: build-pkg.sh
planning/: parc-m0-tasks.md  parc-m4-tasks.md  parc-m8-tasks.md  parc-prd.md
