[package]
name = "parc-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parc"
path = "src/main.rs"

[dependencies]
parc-core = { path = "../parc-core" }
parc-server = { path = "../parc-server" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
termimad = "0.30"
serde_json = "1"
chrono = "0.4"

[features]
default = []
wasm-plugins = ["parc-core/wasm-plugins"]

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
