[package]
name = "parc-cli"
version = "0.2.0"
edition = "2021"
description = "Command-line interface for parc, a local-first personal archive"
license = "MIT"
repository = "https://github.com/luntta/parc"

[[bin]]
name = "parc"
path = "src/main.rs"

[dependencies]
parc-core = { path = "../parc-core" }
parc-server = { path = "../parc-server" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
termimad = "0.30"
comrak = { version = "0.52.0", default-features = false }
crossterm = "0.29"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "unstable-rendered-line-info"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
semver = "1"
ureq = { version = "2", features = ["json"] }

[features]
default = []
wasm-plugins = ["parc-core/wasm-plugins"]

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
