[package]
name = "parc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
comrak = "0.28"
regex = "1"
similar = "2"
toml = "0.8"
wasmtime = { version = "28", optional = true, default-features = false, features = ["cranelift", "runtime"] }

[features]
default = []
wasm-plugins = ["wasmtime"]

[dev-dependencies]
tempfile = "3"
