[package]
name = "parc-core"
version = "0.2.0"
edition = "2021"
description = "Core library for parc, a local-first personal archive"
license = "MIT"
repository = "https://github.com/luntta/parc"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
ulid = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "1"
libc = "0.2"
comrak = { version = "0.52.0", default-features = false }
regex = "1"
similar = "2"
toml = "0.8"
nucleo = "0.5"
wasmtime = { version = "43.0.2", optional = true, default-features = false, features = ["cranelift", "runtime"] }

[features]
default = []
wasm-plugins = ["wasmtime"]

[dev-dependencies]
tempfile = "3"
