[package]
name = "parc-gui"
version = "0.1.0"
edition = "2021"
description = "Tauri desktop GUI for parc"

[dependencies]
parc-core = { path = "../parc-core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
comrak = "0.36"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
