[package]
name = "parc-server"
version = "0.3.0"
edition = "2021"
description = "JSON-RPC server for parc, a local-first personal archive"
license = "MIT"
repository = "https://github.com/luntta/parc"

[lib]
name = "parc_server"
path = "src/lib.rs"

[[bin]]
name = "parc-server"
path = "src/main.rs"

[dependencies]
parc-core = { path = "../parc-core" }
tokio = { version = "1", features = ["rt", "io-util", "io-std", "net", "signal", "macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
